feat: add dataset handler for face recognizing service
