# docs/swagger.json
@@ -8,32 +8,6 @@
     },
     "basePath": "/",
     "paths": {
-        "/api/dataset": {
-            "get": {
-                "description": "Возвращает список пользователей с эмбеддингами лиц (левый, правый и центральный ракурс).",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "dataset"
-                ],
-                "summary": "Получить датасет эмбеддингов лиц",
-                "responses": {
-                    "200": {
-                        "description": "Датасет успешно получен",
-                        "schema": {
-                            "$ref": "#/definitions/dataset.DatasetResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Ошибка при получении датасета",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/api/departments": {
             "get": {
                 "description": "Возвращает список департаментов с пагинацией.",
@@ -726,6 +700,32 @@
                     },
                     "500": {
                         "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/service/dataset": {
+            "get": {
+                "description": "Возвращает список пользователей с эмбеддингами лиц (левый, правый и центральный ракурс).",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dataset"
+                ],
+                "summary": "Получить датасет эмбеддингов лиц",
+                "responses": {
+                    "200": {
+                        "description": "Датасет успешно получен",
+                        "schema": {
+                            "$ref": "#/definitions/dataset.DatasetResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка при получении датасета",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
